# game-web

./: Cargo.toml  games.sql
.sqlx/: query-8552f0e42f99698b0ed80446651061cfbc3f9f0c1ae5d996e344be0cff569ae1.json
src/: main.rs
templates/assets/css/: style.css  style_dashboard.css
templates/pages/: game_window.html  games.html
templates/pages/admin/: dashboard.html
