[package]
name = "mweb"
version = "0.1.0"
edition = "2021"

[profile.release]
strip = true
lto = true
codegen-units = 1

[dependencies]
mimalloc = { version = "*", features = ["secure"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
axum = "0.7"
askama = "0.12"
serde = { version = "1.0", features = ["derive"] }
sonic-rs = "0.3"
sqlx = { version = "0.7", features = [ "runtime-tokio", "postgres", "ipnetwork" ] }
minify-html = "0.15"
memory-serve = "0.4"
rayon = "1.9"
dotenv